Day07. Added change private fields